fix: improve admin screen dark mode opcache text contrast and loading bar aria values

--- a/bloembraaden/_front/admin.css
+++ b/bloembraaden/_front/admin.css
@@ -63,6 +63,7 @@
     height: auto;
 }
 
+#PEATCMS_admin_page pre,
 #PEATCMS_admin_page td {
     color: var(--admin-color-key);
 }
